--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "joi": "^18.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.3",
+    "multer": "^2.0.2",
     "populate": "^5.0.1"
   },
   "devDependencies": {
